# sopel-doubts

./: README.md  pyproject.toml  x.py
sopel_doubts/: plugin.py
